tdf#107969: use proper serializer for VML in footnotes/endnotes

Change-Id: Ie0e062fab0ae1a63094655cc0f6bee958b4c1087
Reviewed-on: https://gerrit.libreoffice.org/55978
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit c67b7d795589aaf8f3396a379ef348bd650cb2dc)